feat(pwa): switch to static manifest.json file to support PWA in dev mode
Replace VitePWA-generated manifest with a static public/manifest.json
file for consistent behavior between dev and prod environments.

- Add public/manifest.json with app metadata and icon configuration
- Link manifest directly in index.html
- Disable VitePWA manifest generation in vite.config.ts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Gremlin Of The Friday Afternoon</title>
 
     <!-- PWA Meta Tags -->
+    <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/icons/gremlin-icon.png" />
     <meta name="apple-mobile-web-app-title" content="GremlinOFA" />
   </head>
